<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_no"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_12">


            <LinearLayout
                style="@style/linear_webview"
                >

                <TextView
                    style="@style/text_chart_title"
                    android:text="@string/yongdutu"

                    />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                style="@style/linear_webview"
                >

                <TextView
                    style="@style/text_chart_title"
                    android:text="@string/renliutu"

                    />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <LinearLayout
                style="@style/linear_webview"
                android:layout_marginBottom="@dimen/dp_6">

                <TextView
                    style="@style/text_chart_title"
                    android:text="@string/chuxingfangshi"

                    />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                style="@style/linear_webview"
                android:layout_marginBottom="@dimen/dp_6">

                <TextView
                    style="@style/text_chart_title"
                    android:text="@string/chuxingmudi"

                    />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
