<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <RelativeLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_3"
                    android:layout_weight="1"
                    android:background="@drawable/shape_relative_zhibiao">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_12"
                        android:text="@string/yichangjuji"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/dp_70"
                        android:layout_marginBottom="@dimen/dp_70"
                        android:text="无"
                        android:textColor="@color/text_highblue"
                        android:textSize="@dimen/sp_24" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_3"
                    android:layout_weight="1"
                    android:background="@drawable/shape_relative_zhibiao">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_12"
                        android:text="@string/yongjidu"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/dp_70"
                        android:layout_marginBottom="@dimen/dp_70"
                        android:text="14"
                        android:textColor="@color/red2"
                        android:textSize="@dimen/sp_24" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_relative_zhibiao"
                android:orientation="vertical">

                <TextView
                    android:layout_marginBottom="@dimen/dp_m_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/lvyoujingdian"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:orientation="horizontal"
                   >

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/text_jingdian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_40"
                            android:text="xx公园"
                            android:textColor="@color/text_highblue"
                            android:textSize="@dimen/sp_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text_jingdian"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_12"
                            android:layout_marginBottom="@dimen/dp_40"
                            android:text="160"
                            android:textColor="@color/red2"
                            android:textSize="@dimen/sp_14" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/text_jingdian1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_40"
                            android:text="xx博物馆"
                            android:textColor="@color/text_highblue"
                            android:textSize="@dimen/sp_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text_jingdian1"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_12"
                            android:layout_marginBottom="@dimen/dp_40"
                            android:text="xx王府"
                            android:textColor="@color/text_highblue"
                            android:textSize="@dimen/sp_24" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_12"
                android:layout_weight="1"
                android:background="@drawable/shape_relative_zhibiao"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/gaofengshiduan"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/text_zaogaofeng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_40"
                    android:text="8:00 - 10:00"
                    android:textColor="@color/text_highblue"
                    android:textSize="@dimen/sp_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_zaogaofeng"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_12"
                    android:layout_marginBottom="@dimen/dp_40"
                    android:text="17:00 - 20:00"
                    android:textColor="@color/text_highblue"
                    android:textSize="@dimen/sp_24" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
